--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   var ctx = document.getElementById("ctx").getContext("2d");
   socket.on('time', function(timeString) {
     ctx.fillText("Server time is: " + timeString, 100, 100);
+    ctx.fillText("Work in progress", 100, 150);
   });
 </script>
