--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   socket.on('time', function(timeString) {
     ctx.fillText("Server time is: " + timeString, 100, 100);
     ctx.fillText("Work in progress", 100, 150);
+    ctx.fillText("Local work", 100, 200);
   });
 </script>
