--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<canvas id="ctx" width="600" height="500" style="border:1px solid #000000"></canvas>
+<canvas id="ctx" width="600" height="600" style="border:1px solid #000000"></canvas>
 <script src="/socket.io/socket.io.js"></script>
 <script>
   var socket = io();
-  var ctx = document.getElementById("ctx").getContext("2d");
-  socket.on('time', function(timeString) {
-    ctx.fillText("Server time is: " + timeString, 100, 100);
-    ctx.fillText("Work in progress", 100, 150);
-    ctx.fillText("Local work", 100, 200);
-  });
+
+  function init(){
+    window.requestAnimationFrame(draw);
+  }
+
+  function draw(){
+    var ctx = document.getElementById("ctx").getContext("2d");
+    ctx.clearRect(0,0,600,600);
+
+    window.requestAnimationFrame(draw);
+  }
+
+  init();
+
 </script>
