--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   ctx.font = "30px monospace";
 
+  var mouseX = 0;
+  var mouseY = 0;
+
   function Letter(char, x, y, randomRotation, id)
   {
     this.id = id;
@@ -16,18 +19,24 @@
     this.x = x;
     this.y = y;
     this.rotation = randomRotation;
-    this.size = 30;
+    this.h = 12;
+    this.w = 20;
     this.display = display;
     this.color = "rgb("+
     Math.floor(Math.random()*255)+ ","+
     Math.floor(Math.random()*255)+ ","+
     Math.floor(Math.random()*255)+")";
 
+    this.dragging = false; // Is the object being dragged?
+    this.rollover = false; // Is the mouse over the object?
+    this.offsetX;
+    this.offsetY; // Mouse offset
+
     function display()
     {
       ctx.save();
       ctx.translate(this.x, this.y);
-      ctx.strokeRect(1, 0, this.size/2-2, -this.size+10);
+      ctx.strokeRect(0, 0, this.h, -this.w);
       ctx.rotate(this.rotation);
       ctx.fillStyle = this.color;
       ctx.shadowBlur = 3;
@@ -58,16 +67,76 @@
     window.requestAnimationFrame(draw);
   }
 
+  document.onmousemove = function(mouse)
+  {
+    mouseX = mouse.clientX - 4; //correction because canvas is shifted by 4,4
+    mouseY = mouse.clientY - 4;
+  }
+  document.getElementById("ctx").onmousedown = onMouseDown;
+  document.getElementById("ctx").onmouseup = onMouseUp;
+
   function draw(){
     ctx.clearRect(0,0,600,600);
 
     for(var i = 0; i < letters.length; i++)
     {
+      if (mouseX > letters[i].x &&
+          mouseX < letters[i].x + letters[i].w &&
+          mouseY > letters[i].y - letters[i].h &&
+          mouseY < letters[i].y)
+      {
+          letters[i].rollover = true;
+          console.log("Rollover!");
+      }
+      else
+      {
+          letters[i].rollover = false;
+      }
+
+      if (letters[i].dragging == true)
+      {
+        letters[i].x = mouseX + letters[i].offsetX;
+        letters[i].y = mouseY + letters[i].offsetY;
+        var data = {
+          position: i,
+          x: letters[i].x,
+          y: letters[i].y
+        }
+        console.log("New position!");
+      }
       letters[i].display();
     }
 
     window.requestAnimationFrame(draw);
   }
+
+  function onMouseDown()
+  {
+    for (var i = 0; i < letters.length; i++)
+    {
+      if (mouseX > letters[i].x &&
+          mouseX < letters[i].x + letters[i].w &&
+          mouseY > letters[i].y - letters[i].h &&
+          mouseY < letters[i].y)
+      {
+        letters[i].dragging = true;
+        letters[i].offsetX = letters[i].x - mouseX;
+        letters[i].offsetY = letters[i].y - mouseY;
+        console.log("being dragged");
+      }
+    }
+    console.log("Clicked!");
+  }
+
+  function onMouseUp()
+  {
+    for (var i = 0; i < letters.length; i++)
+    {
+      letters[i].dragging = false;
+    }
+    console.log("Released!");
+  }
+
 
   init();
 
