--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     {
       ctx.save();
       ctx.translate(this.x, this.y);
-      ctx.strokeRect(0, 0, this.h, -this.w);
+      //ctx.strokeRect(0, 0, this.h, -this.w);
       ctx.rotate(this.rotation);
       ctx.fillStyle = this.color;
       ctx.shadowBlur = 3;
