--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 
   function onMouseUp()
   {
+    cooldown = 0;
     for (var i = 0; i < letters.length; i++)
     {
       letters[i].dragging = false;
