--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   var mouseX = 0;
   var mouseY = 0;
 
+  var canvasWidth = 600;
+  var canvasHeight = 600;
+
   var cooldown = 0;
 
   function Letter(char, x, y, randomRotation, id)
@@ -145,8 +148,11 @@
         letters[i].dragging = true;
         letters[i].offsetX = letters[i].x - mouseX;
         letters[i].offsetY = letters[i].y - mouseY;
-        console.log("being dragged");
       }
+      if (letters[i].x > canvasWidth) {letters[i].x = canvasWidth;}
+      if (letters[i].x < 0) {letters[i].x = 0;}
+      if (letters[i].y > canvasHeight) {letters[i].y = canvasHeight;}
+      if (letters[i].y < 0) {letters[i].y = 0;}
     }
     console.log("Clicked!");
   }
