Dragged letter moves smooth
Dragged letter moves smooth on client side

--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
 
         letters[i].x = mouseX + letters[i].offsetX;
         letters[i].y = mouseY + letters[i].offsetY;
+        letters[i].serverX = mouseX + letters[i].offsetX;
+        letters[i].serverY = mouseY + letters[i].offsetY;
 
         var data = {
           position: i,
