--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     {
       ctx.save();
       ctx.translate(this.x, this.y);
-      ctx.strokeRect(-2, -1, this.h, -this.w);
+      //ctx.strokeRect(-2, -1, this.h, -this.w);
       ctx.rotate(this.rotation);
       ctx.fillStyle = this.color;
       ctx.shadowBlur = 3;
