--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <canvas id="ctx" width="600" height="600" style="border:1px solid #cccccc"></canvas>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-16" />
 <script src="/socket.io/socket.io.js"></script>
 <script>
   var socket = io();
